# airbnb_madrid_datascience

./: 404.html  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
configuracion_del_proyecto/: index.html
despliegue/: index.html
docs/: configuracion_del_proyecto.md  evaluation_v_0.0.1.md  index.md  madrid_airbnb_eda.ipynb  madrid_airbnb_price_prediction.ipynb
evaluation_v_0.0.1/: index.html
madrid_airbnb_eda/: index.html
madrid_airbnb_price_prediction/: index.html
notebooks/: madrid_airbnb_eda.ipynb  madrid_airbnb_price_prediction.ipynb
notebooks/inspo/: analysis-visualization-and-prediction.ipynb  housing-crisis-and-tourism-in-madrid.ipynb  price-prediction-with-random-forest-regressor.ipynb
search/: search_index.json
