[tool.poetry]
name = "keepler-technical-assessment-gorka-bengochea"
version = "0.1.0"
description = ""
authors = ["Gorka Jesús Bengochea Fuentes <gorkachea@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
ipykernel = "^6.24.0"
mkdocs-jupyter = "^0.24.2"
plotly = "^5.15.0"
branca = "^0.6.0"
folium = "^0.14.0"
nltk = "^3.8.1"
tqdm = "^4.65.0"
ipywidgets = "^8.0.7"
xgboost = "^1.7.6"
lightgbm = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
